--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                 <a href="#">Help the shelter</a>
                 <a href="#">contacts</a>
             </div>
+             <div class="header-links">
+                <a href="#">About the shelter</a>
+                <a href="#">our pets</a>
+                <a href="#">Help the shelter</a>
+                <a href="#">contacts</a>
+            </div>
         </div>
     </div>
  </header>
